# mqtt-CarDashboard_ASURT

./: CMakeLists.txt  Main.qml  README.md  main.cpp
Controllers/: mqttclient.cpp  mqttclient.h  udpclient.cpp  udpclient.h  udpparserworker.cpp  udpparserworker.h  udpreceiverworker.cpp  udpreceiverworker.h
UI/InformationPage/: BatteryLevelIndicator.qml  BrakePadel.qml  EulerGauges.qml  EulerVisual.qml  GpsPlotter.qml  Information.qml  Information.qml.autosave  RpmMeter.qml  TemperatureIndicator.qml  WheelSpeed.qml
UI/WelcomePage/: MyButton.qml  WaitingScreen.qml  WelcomeScreen.qml
wifi_manager/: README.md  example_main.c  wifi_manager.c  wifi_manager.h
